--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,14 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
+        "php": "^8.2",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^9.19",
+        "laravel/framework": "^9.21",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "stancl/tenancy": "^3.5"
+        "pusher/pusher-php-server": "^7.2",
+        "spatie/invade": "^1.1",
+        "stancl/tenancy": "dev-broadcasting-tenancy"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
