--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "laravel/tinker": "^2.7",
         "pusher/pusher-php-server": "^7.2",
         "spatie/invade": "^1.1",
-        "stancl/tenancy": "dev-broadcasting-tenancy"
+        "stancl/tenancy": "^3.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
