--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "livewire/livewire": "^2.12.2",
         "pusher/pusher-php-server": "^7.2",
         "spatie/invade": "^1.1",
-        "stancl/tenancy": "@dev"
+        "stancl/tenancy": "@dev",
+        "symfony/finder": "^6.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.22",
